player moving adjustments

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <h1>Canvas Ball</h1>
+    <h1>StopWatch Ball</h1>
     <canvas id="myCanvas"></canvas>
      <div class="container">
         <p>
